[package]
name = "handy-gcs"
version = "0.1.0"
authors = ["Eric Mikulin <ericm99@gmail.com>"]
edition = "2018"

[dependencies]
crossbeam = "0.7.3"

[dependencies.mavlink]
version = "0.8.6"
features = ["ardupilotmega"]

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]
